Style sheet updated

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="pimg4">
     <div class="ptext">
-      <span class="border">
+      <span class="border transparent">
         Parallax Website Template
       </span>
     </div>
