--- a/index.html
+++ b/index.html
@@ -65,5 +65,9 @@
     </div>
   </div>
 
+  <section class="section section-footer">
+    <h4>Powered and Developed by <a href="http://webstitching.com">Web Stitching</a></h4>
+    <p>&copy; All copy rights are reserved 2017</p>
+  </section>
 </body>
 </html>
